# companion

./: .gitignore  LICENSE.txt  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/guides/: phase-1-project-foundation.md  phase-2-data-integration.md  phase-3-ai-processing.md  phase-4-frontend-development.md  phase-5-mvp-polish.md
src/: App.tsx  index.css  store.test.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_slack_channels.sql  003_slack_users.sql
src-tauri/src/: analytics.rs  lib.rs  main.rs  notifications.rs
src-tauri/src/ai/: gemini.rs  mod.rs  pipeline.rs  prompts.rs
src-tauri/src/ai/gemini/: auth.rs  client.rs  mod.rs  types.rs
src-tauri/src/ai/pipeline/: hierarchical.rs  mod.rs  storage.rs  topics.rs  types.rs
src-tauri/src/ai/prompts/: mod.rs  templates.rs  types.rs
src-tauri/src/commands/: analytics.rs  credentials.rs  data.rs  digest.rs  mod.rs  preferences.rs  slack.rs  sync.rs  types.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/sync/: atlassian.rs  background.rs  mod.rs  oauth.rs  queue.rs  slack.rs
src-tauri/src/sync/atlassian/: client.rs  mod.rs  sync.rs  types.rs
src-tauri/src/sync/slack/: client.rs  mod.rs  sync.rs  types.rs
src-tauri/src/tray/: mod.rs
src/components/: CategoryBadge.test.tsx  CategoryBadge.tsx  ContentCard.tsx  ContentDetailModal.test.tsx  (+17 more)
(+68 files in other folders)
